--- a/src/less/style.less
+++ b/src/less/style.less
@@ -15,4 +15,11 @@
 
 .svgImage {
     width: 350px;
+    box-shadow: 4px 4px 8px 0 rgb(34 60 80 20%);
+}
+
+.testInput {
+    &::placeholder {
+        color: blue;
+    }
 }
